+ "Render Media File" behavior changed to reset&clear exiting graph
+ added "Add Media File" that has the original "Render Media File" functionality
+ rendered files are now loaded into the recently used list
+ added shortcuts to Video and Audio renderers
+ fixed media type parsing
+ Windows XP fixes - at startup window does not flicker and move

[0.1.6.0 - Alpha   09/Feb/2008]
+ added scrollbars when graph is larger than view area
+ added zoom (50%, 75%, 100%, 150%, 200%)
+ faster graph rendering
+ screenshot will contain whole graph even if it is not completely visible in the view area
+ added IFileSinkFilter handling page
+ added shortcuts to create File Writer

[0.1.5.1 - Alpha   02/Feb/2008]
+ added most recently used list (with Clear button)
+ filters are disconnected and removed manually when closing graph
+ added screenshot-to-clipboard feature
+ added Remote Graph feature
+ GraphStudio can detect state changes from remote graph

[0.1.4.0 - Alpha   26/Jan/2008]
+ GraphStudio can now display property pages
+ added rightclick menu on filters/pins
+ doubleclicking a filter will show its property page
+ the "Property page" button in "Filters" window now works
+ added shourcut - doubleclicking a filter in the "Filters" window will add it to the graph
+ added "Render pin" feature
+ not-implemented buttons are disabled now
+ added vista-style tool bars

[0.1.3.0 - Alpha   22/Jan/2008]
+ added Drag&Drop support for opening files
+ filters dialog now displays merits formatted as uppercase
+ inserted filters are checked for IFileSourceFilter
+ filters exposing IFileSourceFilter are named after the file they deliver
+ added IFileSourceFilter dialog that keeps list of recently used files/urls
+ added "Insert File Source (Async.)" shortcut into the Graph menu
+ added parser for VIDEOINFOHEADER, VIDEOINFOHEADER2, BITMAPINFOHEADER and MPEG2VIDEOINFO
+ added 5 levels of details for text report

[0.1.2.0 - Alpha   21/Jan/2008]
+ added Text Information window