@@ -210,6 +210,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\FavoritesForm.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\FileSinkForm.cpp"
 				>
 			</File>
@@ -292,6 +296,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\FavoritesForm.h"
+				>
+			</File>
+			<File
 				RelativePath=".\src\FileSinkForm.h"
 				>
 			</File>
@@ -362,7 +370,15 @@
 			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
 			>
 			<File
+				RelativePath=".\res\bitmap1.bmp"
+				>
+			</File>
+			<File
 				RelativePath=".\res\bitmap_logo.bmp"
+				>
+			</File>
+			<File
+				RelativePath=".\res\bitmap_tree.bmp"
 				>
 			</File>
 			<File
