@@ -73,6 +73,7 @@
 #include "MainFrm.h"
 #include "graphDoc.h"
 #include "FiltersForm.h"
+#include "FavoritesForm.h"
 #include "EventsForm.h"
 #include "RemoteGraphForm.h"
 #include "TextInfoForm.h"
